Pakcages updates and dependencies secure

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tweeter",
+  "name": "tweeter-resubmission",
   "version": "1.0.0",
   "description": "A twitter clone by Lighthouse Labs for web bootcamp students to learn front-end dev skillz",
   "main": "server/index.js",
